@@ -89,19 +89,19 @@ edb_ed $DB add "/appearance/scrollbar/horizontal/base" str "/appearance/scrollba
 edb_ed $DB add "/appearance/scrollbar/horizontal/base/visible" str "yes"
 edb_ed $DB add "/appearance/scrollbar/horizontal/dragbar/base" str "/appearance/scrollbar/horizontal/dragbar/base.bits.db"
 edb_ed $DB add "/appearance/scrollbar/horizontal/dragbar/base/visible" str "yes"
-edb_ed $DB add "/appearance/scrollbar/horizontal/increment/base" str "/appearance/scrollbar/horizontal/increment/base.bits.db"
-edb_ed $DB add "/appearance/scrollbar/horizontal/increment/base/visible" str "yes"
-edb_ed $DB add "/appearance/scrollbar/horizontal/decrement/base" str "/appearance/scrollbar/horizontal/decrement/base.bits.db"
-edb_ed $DB add "/appearance/scrollbar/horizontal/decrement/base/visible" str "yes"
+edb_ed $DB add "/appearance/scrollbar/horizontal/button_increment/base" str "/appearance/scrollbar/horizontal/button_increment/base.bits.db"
+edb_ed $DB add "/appearance/scrollbar/horizontal/button_increment/base/visible" str "yes"
+edb_ed $DB add "/appearance/scrollbar/horizontal/button_decrement/base" str "/appearance/scrollbar/horizontal/button_decrement/base.bits.db"
+edb_ed $DB add "/appearance/scrollbar/horizontal/button_decrement/base/visible" str "yes"
 
 edb_ed $DB add "/appearance/scrollbar/vertical/base" str "/appearance/scrollbar/vertical/base.bits.db"
 edb_ed $DB add "/appearance/scrollbar/vertical/base/visible" str "yes"
 edb_ed $DB add "/appearance/scrollbar/vertical/dragbar/base" str "/appearance/scrollbar/vertical/dragbar/base.bits.db"
 edb_ed $DB add "/appearance/scrollbar/vertical/dragbar/base/visible" str "yes"
-edb_ed $DB add "/appearance/scrollbar/vertical/increment/base" str "/appearance/scrollbar/vertical/increment/base.bits.db"
-edb_ed $DB add "/appearance/scrollbar/vertical/increment/base/visible" str "yes"
-edb_ed $DB add "/appearance/scrollbar/vertical/decrement/base" str "/appearance/scrollbar/vertical/decrement/base.bits.db"
-edb_ed $DB add "/appearance/scrollbar/vertical/decrement/base/visible" str "yes"
+edb_ed $DB add "/appearance/scrollbar/vertical/button_increment/base" str "/appearance/scrollbar/vertical/button_increment/base.bits.db"
+edb_ed $DB add "/appearance/scrollbar/vertical/button_increment/base/visible" str "yes"
+edb_ed $DB add "/appearance/scrollbar/vertical/button_decrement/base" str "/appearance/scrollbar/vertical/button_decrement/base.bits.db"
+edb_ed $DB add "/appearance/scrollbar/vertical/button_decrement/base/visible" str "yes"
 
 # Add keys for separator widget
 echo -n "."
