@@ -13,6 +13,8 @@ ewl_test_SOURCES		=	ewl_test.c \
 					ewl_entry_test.c \
 					ewl_image_test.c \
 					ewl_notebook_test.c \
+					ewl_scrollbar_test.c \
+					ewl_scrollpane_test.c \
 					ewl_seeker_test.c \
 					ewl_spinner_test.c \
 					ewl_table_test.c \
